force-app/main/default/objects/Org_Limits__c/Org_Limits__c.object-meta.xml
<CustomObject>
    <label>Org Limits</label>
    <nameField>
        <displayFormat>Org_Limits-{000000}</displayFormat>
        <label>Org Limits Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Org Limits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>