force-app/main/default/objects/Org_Limits__c/fields/Api_Limit__c.field-meta.xml
<CustomField><fullName>Api_Limit__c</fullName><label>OBS API Limit</label><precision>18</precision><scale>0</scale><type>Number</type></CustomField>