force-app/main/default/objects/Org_Limits__c/fields/Api_Usage_Percentage__c.field-meta.xml
<CustomField><fullName>Api_Usage_Percentage__c</fullName><formula>IF(Api_Limit__c > 0, Api_Used__c / Api_Limit__c, 0)</formula><formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs><label>API Usage Percentage</label><precision>5</precision><scale>2</scale><type>Percent</type></CustomField>