force-app/main/default/objects/Org_Limits__c/fields/Api_Used__c.field-meta.xml
<CustomField><fullName>Api_Used__c</fullName><label>API Used</label><precision>18</precision><scale>0</scale><type>Number</type></CustomField>