force-app/main/default/objects/Org_Limits__c/fields/Data_Storage_Limit_MB__c.field-meta.xml
<CustomField><fullName>Data_Storage_Limit_MB__c</fullName><label>Data Storage Limit MB</label><precision>18</precision><scale>2</scale><type>Number</type></CustomField>