force-app/main/default/objects/Org_Limits__c/fields/Data_Storage_Used_MB__c.field-meta.xml
<CustomField><fullName>Data_Storage_Used_MB__c</fullName><label>OBS Data Storage Used MB</label><precision>18</precision><scale>2</scale><type>Number</type></CustomField>