force-app/main/default/objects/Org_Limits__c/fields/File_Storage_Limit_MB__c.field-meta.xml
<CustomField><fullName>File_Storage_Limit_MB__c</fullName><label>File Storage Limit MB</label><precision>18</precision><scale>2</scale><type>Number</type></CustomField>