force-app/main/default/objects/Org_Limits__c/fields/Storage_Usage_Percentage__c.field-meta.xml
<CustomField><fullName>Storage_Usage_Percentage__c</fullName><formula>IF((Data_Storage_Limit_MB__c + File_Storage_Limit_MB__c) > 0, (Data_Storage_Used_MB__c + File_Storage_Used_MB__c)/(Data_Storage_Limit_MB__c + File_Storage_Limit_MB__c), 0)</formula><formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs><label>Storage Usage Percentage</label><precision>5</precision><scale>2</scale><type>Percent</type></CustomField>