force-app/main/default/objects/Org_Limits__c/fields/Streaming_Limit__c.field-meta.xml
<CustomField><fullName>Streaming_Limit__c</fullName><label>OBS Streaming Limit</label><precision>18</precision><scale>0</scale><type>Number</type></CustomField>