force-app/main/default/objects/Org_Limits__c/fields/Streaming_Used__c.field-meta.xml
<CustomField><fullName>Streaming_Used__c</fullName><label>OBS Streaming Used</label><precision>18</precision><scale>0</scale><type>Number</type></CustomField>